<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.ycalendar</groupId>
    <artifactId>jcalendartool</artifactId>
    <version>0.3.0</version>
    <packaging>jar</packaging>

    <name>jcalendartool</name>
    <description>
        模仿mozilla lightning日历，开发的java版本的日历，但是没有多人协同功能，主要是个人使用。
    </description>    
    <url>https://github.com/yuedaxia76/jcalendartool</url>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <resease.outputDirectory>C:/ework/yc/dist</resease.outputDirectory>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <commons-csv.version>1.8</commons-csv.version>
        <H2.version>1.4.200</H2.version>
        <slf4j.version>1.7.30</slf4j.version>
        <jcache.version>1.1.0</jcache.version>
        <ehcache.version>3.6.1</ehcache.version>
        <ical4j.version>3.0.7</ical4j.version>
        <log4j2.version>2.13.3</log4j2.version>
        <testng.version>7.1.0</testng.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>${H2.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.mnode.ical4j</groupId>
            <artifactId>ical4j</artifactId>
            <version>${ical4j.version}</version>
            <scope>compile</scope>
        </dependency>          
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>${commons-csv.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
            <scope>compile</scope>
        </dependency>            
        <dependency>
            <groupId>javax.cache</groupId>
            <artifactId>cache-api</artifactId>
            <version>${jcache.version}</version>
            <scope>runtime</scope>
        </dependency> 
        <dependency>
            <groupId>org.ehcache</groupId>
            <artifactId>ehcache</artifactId>
            <version>${ehcache.version}</version>
            <scope>runtime</scope>
        </dependency>              




        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j2.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j2.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j2.version}</version>
            <scope>runtime</scope>
        </dependency>  
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>



    <build>
        <defaultGoal>compile</defaultGoal>
        <sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.properties</include>
                    <include>**/*.xml</include>
                    <include>**/*.png</include>
                    <include>**/*.ico</include>
                    <include>**/*.gif</include>
                    <include>**/*.sql</include>
                    <include>META-INF/**</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/java</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*.cmd</include>
                </includes>
            </resource>            
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/java</directory>
                <includes>
                    <include>**/*.sql</include>
                    <include>**/*.xml</include>
                    <include>**/*.ics</include>
                    <include>**/*.csv</include>
                </includes>
            </testResource>
        </testResources>                
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <verbose>true</verbose>
                    <fork>true</fork>
                    <executable><!-- path-to-javac -->
                    </executable>
                    <compilerVersion>${maven.compiler.target}</compilerVersion>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>org.ycalendar.JCalendar</mainClass>

                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                        </manifest>
                        <manifestEntries>

                            <Implementation-Version>
                                ${project.version}
                            </Implementation-Version>

                        </manifestEntries>
                    </archive>

                    <excludes>
                        <exclude>**/*.jar</exclude>
                        <!--注意这玩意从编译结果目录开始算目录结构-->
                        <exclude>/log4j2.xml</exclude>
                        <exclude>/YCalendar.xml</exclude>
                        <exclude>/ical4j.properties</exclude>
                        <exclude>/startcl.cmd</exclude>
                        <exclude>/.netbeans_automatic_build</exclude>
                        <exclude>/alreadyLoad</exclude>        
                        <exclude>/calendardb.mv.db</exclude>  
                        <exclude>/lib</exclude>                
                    </excludes>                    
                    <outputDirectory>${project.build.outputDirectory}</outputDirectory>
                </configuration>

            </plugin>

            <!-- -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeScope>runtime</includeScope>
                            <outputDirectory>${project.build.outputDirectory}/lib</outputDirectory>
                        </configuration>
                    </execution>
                </executions>

            </plugin>
            
            
 
            <plugin> 
                <artifactId>maven-assembly-plugin</artifactId> 
                <version>3.1.1</version> 
                <configuration> 
                    <appendAssemblyId>false</appendAssemblyId>
                    <outputDirectory>${resease.outputDirectory}</outputDirectory>
                    <descriptors> <!--描述文件路径--> 
                        <descriptor>assembly.xml</descriptor> 
                    </descriptors> 
                </configuration> 
                <executions> 
                    <execution> 
                        <id>make-assembly</id> 
                        <phase>package</phase> <!-- 绑定到package生命周期阶段上 --> 
                        <goals>  
                            <goal>single</goal> 
                        </goals> 
                    </execution> 
                </executions> 
            </plugin> 
      
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <!-- 是否运行单元测试 -->
                    <skipTests>false</skipTests>
                    <!-- 是否显示测试异常堆栈 -->
                    <trimStackTrace>false</trimStackTrace>
                </configuration>
            </plugin>
        </plugins>

    </build>


</project>
